--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -72,6 +72,12 @@
                         </a>
                     }
                 </li>
+                <li class="vss-nav__item nav-item">
+                    <a class="vss-nav__link nav-link" href="/games">
+                        Recorded Games
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
+                    </a>
+                </li>
 
                 <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/schedule">
@@ -102,6 +108,11 @@
                             <li class="vss-dropdown__item">
                                 <a class="vss-dropdown__link dropdown-item" href="/admin/manage-livestreams">
                                     Manage Livestreams
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/games">
+                                    Manage Games
                                 </a>
                             </li>
                         </ul>
