--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -109,12 +109,6 @@
                     </a>
                 </li>
                 <li class="vss-nav__item nav-item">
-                    <a class="vss-nav__link nav-link" href="/games">
-                        Games
-                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
-                    </a>
-                </li>
-                <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/contact">
                         Contact Us
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
@@ -145,7 +139,7 @@
                                 </a>
                             </li>
                             <li class="vss-dropdown__item">
-                                <a class="vss-dropdown__link dropdown-item" href="/admin/games/create">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/games">
                                     <i class="bi bi-film me-2"></i>Upload Game
                                 </a>
                             </li>
