--- a/web_backend/src/web_backend.Blazor.Client/Pages/Admin/Games.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Admin/Games.razor
@@ -1,5 +1,6 @@
 ﻿@page "/admin/games"
 @using System.Net.Http.Json
+@using System.IO
 @using web_backend.Games
 @using web_backend.Enums
 @using Microsoft.AspNetCore.Components.Forms
